--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ Footer{
     background-color: rgb(96, 62, 133);
     color: white;
     width: 100%;
-    position: fixed;
+    position: -ms-page;
     left: 0%;
     bottom: 0%;
 }
@@ -42,4 +42,15 @@ Footer{
     border-radius: 15px;
     padding: 15px;
     margin-bottom: 5px;
+}
+
+.movder{
+    margin-left: 65px;
+}
+
+.fixcol{
+    width: 100%;
+    position: fixed;
+    left: 0%;
+    right: 0%;
 }
