--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,19 @@
     border-radius: 5px;
 }
 
+.suscripciondonacion a{
+    width: 100%;
+    position: -ms-page;
+    left: 0%;
+    bottom: 0%;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    flex-direction: column;
+}
+
 Footer{
     background-color: rgb(96, 62, 133);
     color: white;
@@ -33,7 +46,7 @@ Footer{
     display: -o-flex;
     display: flex;
     flex-direction: column;
-    padding: 60px 0;
+    padding: 10px;
 }
 
 
@@ -56,11 +69,11 @@ Footer{
 }
 
 .btnmedia{
-    margin-left: 30px;
+    margin-left: 10px;
     margin-top: 25px;
-    margin-right: 5px;
+    margin-right: 25px;
     max-width: 150px;
-    max-height: 40px;
+    max-height: 80px;
 }
 
 .fixcol{
@@ -70,10 +83,27 @@ Footer{
     right: 0%;
 }
 
+/**perfil**/
+
+.perfilhome{
+    margin-left: 10px;
+}
+
+.fotoperfil{
+    max-width: 60px;
+    max-height: 60px;
+    border-radius: 100%;
+    margin-left: 15px;
+}
+
+.nombreUsuario{
+    margin-top: 2px;
+}
+
 .cartacss{
     margin-top: 30px;
     margin-bottom: 40px;
-    min-height: 440px;
+    min-height: 480px;
 }
 
 .cartacss .card-link{
@@ -94,6 +124,166 @@ Footer{
 
 .cfooter{
     margin-top: 10px;
+}
+
+.login{
+    width: 900px;
+    height: 629px;
+    background-image: url(../img/bg3.jpg);
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 20px 30px;
+    box-shadow: 0px 0px 20px rgb(0, 0, 0);
+    border-radius: 15px;
+    border: 5px solid rgb(72, 46, 100);
+    color: white;
+}
+
+.login h5{
+    padding-bottom: 5px;
+    margin: 0;
+    text-align: center;
+    margin-bottom: 20px;
+    border-bottom: 2px solid ;
+    font-size: 22px;
+}
+
+.txtlogin{
+    width: 100%;
+    margin-bottom: 10px;
+    border: 3px solid rgb(124, 64, 187);
+    border-radius: 10px;
+    padding: 5px 5px;
+    background-color: rgba(72, 46, 100, 0.5);
+    color: rgb(255, 255, 255);
+}
+
+.btnlogin{
+    width: 30%;
+    height: 30px;
+    border-radius: 10px;
+    background-color: rgba(0, 255, 85, 0.623);
+    color: rgb(255, 255, 255);
+    border: none;
+    font-weight: 600;
+}
+
+.login .plogin{
+    text-align: center;
+    height: 40px;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    border-bottom: 2px solid ;
+}
+
+.login .pregister{
+    height: 20px;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    border-bottom: 2px solid ;
+}
+
+.login a{
+    color: white;
+    text-decoration: none;
+}
+
+.arreglo-container-carrito{
+    margin-top: 20px;
+    margin-bottom: 300px;
+}
+
+.arreglo-container-carrito .items{
+    margin: 10px 10px;
+}
+
+.conte_parent{
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+    flex-wrap:wrap;
+  
+  }
+  .conte{
+      height: 510px;
+      width: 350px;
+      box-shadow: 0 0 15px rgb(0, 0,0) ;
+      margin: 30px 30px;
+  }
+  .conte .card{
+      height: 200px;
+      width: 100%;
+      margin-bottom: 170px;
+  }
+  .card img{
+      margin: auto;
+      display: block;
+  }
+  .conte .gato img{
+      height: 330px;
+      width: 300px;
+      border-radius: 5px;
+      border: solid rgb(0, 0,0);
+  }
+  .conte .gato{
+       background-color: #111;
+  }
+  
+  .informacion{
+      height: 80px;
+      width: 100%;
+  }
+  .informacion h1{
+      font-family: sans-serif;
+      font-size: 1.2em;
+      text-align: center;
+      color: #333;
+      margin-bottom: 10px;
+  }
+  .informacion p{
+      text-align: center;
+      font-family: sans-serif;
+      font-size: .9em;
+      color: #555;
+  }
+  
+  .informacion .x{
+      text-align: center;
+      font-family: sans-serif;
+      font-size: .9em;
+      color: red;
+  }
+  .precio {
+      height:50px;
+      width: 85%;
+      margin: auto;
+      font-family: sans-serif;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+  }
+  .box{
+      width: 80px;
+  }
+   .precio1{
+      color: red;
+      font-size: .8em;
+  }
+  .precio .precio2{
+      font-size: 1.5em;
+  }
+  .shoping{
+      font-size: 1.5em;
+      color: #555;
+  }
+
+.pdcsso{
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 10px;
 }
 
 @media (max-width: 1360px){
