--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,11 @@ Footer{
     margin-bottom: 20px;
 }
 
+.historialh2{
+    margin-top: 20px;
+    margin-left: 35px;
+}
+
 /*Boton De la tabla suscripcion*/
 .boton{
     display: inline-block;
@@ -388,7 +393,6 @@ Footer{
     padding: 12px;
     background: rgb(255, 255, 133);
     text-decoration: none;
-    color: 343759;
     border-radius: 100px;
     text-align: center;
     font-size: 14px;
@@ -410,7 +414,7 @@ Footer{
 
 }
 .tgrand2{
-    min-width: 270px;
+    min-width: 260px;
 
 }
 
@@ -419,11 +423,71 @@ Footer{
 }
 /*FIN DEL CARRITO*/
 
+.carroboton{
+    margin-right:235px;
+    padding: 10px;
+    border-radius: 12px;
+    min-height: 50px;
+    box-shadow: 0px 0px 5px black;
+    border: 2px solid rgb(96, 62, 133);
+    background-color: rgb(159, 113, 207);
+}
 
+/*subs*/
+
+.imgsub{
+    width:50px;
+}
+
+.titulosub{
+    font-size: 40px;
+    font-weight: 500;
+}
+
+.subtitulosub{
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.descripcionsub{
+    font-size: 18px;
+}
 
 @media (max-width: 1360px){
     .imgcartas{
         max-width: 200px
+    }
+    .boton{
+        width: 100px;
+        padding: 12px;
+        font-size: 15px;
+        font-weight: 400;
+        color: black;
+    }
+    .imgsub{
+        max-width: 30px;
+        min-width: 30px;
+    }
+    
+    .titulosub{
+        font-size: 20px;
+        font-weight: 500;
+    }
+    
+    .subtitulosub{
+        font-size: 18px;
+    }
+    
+    .descripcionsub{
+        font-size:15px;
+    }
+    .contenedor{
+        width: 100%;
+        max-width: 500px;
+    }
+    .tabla{
+        height: 400px;
+        padding: 10px;
     }
 }
 
@@ -439,6 +503,31 @@ Footer{
     .cfooter{
         margin-top: 80px;
     }
+    .login{
+        width: 800px;
+        height: fit-content;
+        margin-top: 30px;
+    }
+    .tgrand{
+        max-width: fit-content;
+        min-width: 120px;
+        font-size: 15px;
+    }
+    .carroboton{
+        margin-right: 50px ; padding: 10px; border-radius: 12px; min-height: 20px;
+        box-shadow: 0px 0px 5px black;
+        border: 2px solid rgb(96, 62, 133);
+        background-color: rgb(159, 113, 207);
+    }
+    .historialh2{
+        margin-top: 30px;
+        margin-left: 36px;
+        font-size: 20px;
+    }
+    .tgrand2{
+        min-width: 20px;
+        font-size: 15px;
+    }
 }
 
 @media (max-width: 575px){
@@ -446,6 +535,11 @@ Footer{
         max-width: 400px
     }
 
+    .login{
+        width: 389px;
+        height: fit-content;
+        margin-top: 30px;
+    }
 }
 
 @media (max-width: 800px){
@@ -465,5 +559,70 @@ Footer{
     }
     .eslogan{
         font-size: 20px;
+    }
+    .conte{
+
+        margin: 15px 15px;
+    }
+    .tgrand{
+        max-width: fit-content;
+        min-width: 20px;
+        font-size: 9px;
+    }
+    .tgrand2{
+        min-width: 8px;
+        font-size: 8px;
+    }
+    
+    .tdimg{
+        max-width: 30px;
+    }
+    .historialh2{
+        margin-top: 30px;
+        margin-left: 36px;
+        font-size: 15px;
+    }
+    .carroboton{
+        margin-right: 20px ; padding: 10px; border-radius: 12px; min-height: 20px;
+        box-shadow: 0px 0px 5px black;
+        border: 2px solid rgb(96, 62, 133);
+        background-color: rgb(159, 113, 207);
+    }
+    .boton{
+        width: 100px;
+        padding: 12px;
+        font-size: 15px;
+        font-weight: 400;
+        color: black;
+    }
+    .imgsub{
+        max-width: 30px;
+        min-width: 30px;
+    }
+    
+    .titulosub{
+        font-size: 20px;
+        font-weight: 500;
+    }
+    
+    .subtitulosub{
+        font-size: 18px;
+    }
+    
+    .descripcionsub{
+        font-size:15px;
+    }
+    .contenedor{
+        width: 100%;
+        max-width: 500px;
+    }
+    .tabla{
+        height: 400px;
+        padding: 10px;
+    }
+    .login{
+        width: 389px;
+        height: fit-content;
+        margin-top: 30px;
     }
 }
